--- a/order/order/src/main/resources/application.properties
+++ b/order/order/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=order
+spring.application.name=ORDER-SERVICE
 server.port=7072
 #spring.datasource.url=jdbc:h2:file:~/capstone
 #spring.datasource.username=sa
@@ -9,3 +9,4 @@ spring.h2.console.path=/h2-console
 spring.config.import=optional:configserver:http://localhost:9595
 spring.sql.init.mode=ALWAYS
 spring.jpa.hibernate.ddl-auto=update
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
